// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a lambda code deploy app 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deployment_option\\": \\"WITH_TRAFFIC_CONTROL\\",
            \\"deployment_type\\": \\"BLUE_GREEN\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda code deploy app with sns topic arn 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deployment_option\\": \\"WITH_TRAFFIC_CONTROL\\",
            \\"deployment_type\\": \\"BLUE_GREEN\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    },
    \\"aws_codestarnotifications_notification_rule\\": {
      \\"test-lambda-code-deploy_notifications_7F614EE2\\": {
        \\"detail_type\\": \\"BASIC\\",
        \\"event_type_ids\\": [
          \\"codedeploy-application-deployment-failed\\"
        ],
        \\"name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"resource\\": \\"arn:aws:codedeploy:us-east-1:123:application:\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"target\\": [
          {
            \\"address\\": \\"test:deploy-topic:arn\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/notifications\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_notifications_7F614EE2\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda code deploy app with sns topic arn and detail type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deployment_option\\": \\"WITH_TRAFFIC_CONTROL\\",
            \\"deployment_type\\": \\"BLUE_GREEN\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    },
    \\"aws_codestarnotifications_notification_rule\\": {
      \\"test-lambda-code-deploy_notifications_7F614EE2\\": {
        \\"detail_type\\": \\"FULL\\",
        \\"event_type_ids\\": [
          \\"codedeploy-application-deployment-failed\\"
        ],
        \\"name\\": \\"\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"resource\\": \\"arn:aws:codedeploy:us-east-1:123:application:\${aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE.name}\\",
        \\"target\\": [
          {
            \\"address\\": \\"test:deploy-topic:arn\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/notifications\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_notifications_7F614EE2\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;
